removed rabbitmq entirely and changed product & order microservices to use week 9 code

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -334,7 +334,7 @@
         <h1>E-commerce Application</h1>
         <p style="text-align: center; color: #666;">
             Product Microservice, Order Microservice, Customer Microservice, 
-            RabbitMQ for Async Events, Persistent Storage & Azure Uploads.
+            Monitoring via Prometheus and Grafana, Persistent Storage & Azure Uploads.
         </p>
 
         <div id="message-box" class="message-box"></div>
